<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F4F2"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/common_title" />

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/register_edit_text_bg" >

        <EditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="38dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/blue_phone_icon"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:hint="@string/login_username_hint"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="#c4c4c4"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/delete_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="20dp"
            android:src="@drawable/shipper_address_close" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_edit_text_bg"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/security_code"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/lock_for_register"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/register_hint_inputcode"
            android:inputType="number"
            android:maxLength="4"
            android:singleLine="true"
            android:textColor="#535353"
            android:textColorHint="#c4c4c4"
            android:textSize="14sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#d1d1d1" />

        <TextView
            android:id="@+id/get_security_code_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/register_get_smdcode"
            android:singleLine="true"
            android:text="@string/register_get_smdcode"
            android:textColor="#39A1E8"
            android:textColorHint="#F3F4F2"
            android:textSize="12sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_edit_text_bg" >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="38dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/lock_for_register"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/register_hint_setyourpwd"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:textColor="#535353"
            android:textColorHint="#c4c4c4"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/delete_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="20dp"
            android:src="@drawable/shipper_address_close" />
    </RelativeLayout>
    <!-- 市场人员推荐 -->

    <TextView
        android:id="@+id/register_recommend_tv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="@string/register_recommend"
        android:textColor="#39A1E8"
        android:textSize="14sp" />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/register_recommend_parent"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_edit_text_bg" >

        <EditText
            android:id="@+id/register_recommend_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/register_recommend_default"
            android:maxLength="16"
            android:singleLine="true"
            android:textColor="#535353"
            android:textColorHint="#c4c4c4"
            android:textSize="14sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/main_register_bt_bg"
        android:gravity="center"
        android:text="@string/login_button_register"
        android:textColor="@color/font_while"
        android:textSize="@dimen/_16sp" />

</LinearLayout>