<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5000"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/imagedemo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/takephoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_pic_sel"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/select_pic_capture"
            android:textColor="#39a1e8"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#5000" />

        <TextView
            android:id="@+id/selphoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_pic_sel"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/select_pic_photo"
            android:textColor="#39a1e8"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="#444444" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_pic_sel"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/select_pic_cancel"
            android:textColor="#686868"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#5000" />
    </LinearLayout>

</LinearLayout>